# surgical_robotics_challenge

./: CMakeLists.txt
ADF/world/: world_stereo.yaml
params/: ecm_left.yaml
scripts/surgical_robotics_challenge/utils/: camera_projection.py
